<?xml version="1.0"?>
<package>
  <name>kubot_launch</name>
  <version>0.0.0</version>
  <description>The kubot_launch package</description>

  <maintainer email="kubilay@todo.todo">kubilay</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hector_quadrotor_gazebo</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_geotiff</run_depend>
  <run_depend>hector_sensors_description</run_depend>
  <run_depend>hector_trajectory_server</run_depend>
  <run_depend>kubot_worlds</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>