<?xml version="1.0"?>
<package>
    <name>kubot_worlds</name>
    <version>0.0.0</version>
    <description>The kubot_worlds package</description>
    
    <maintainer email="karpatkubilay@gmail.com">Kubilay Karpat</maintainer>
    <license>MIT</license>    
    
    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <!-- Examples: -->
    <!-- Use build_depend for packages you need at compile time: -->
    <!--   <build_depend>message_generation</build_depend> -->
    <!-- Use buildtool_depend for build tool packages: -->
    <!--   <buildtool_depend>catkin</buildtool_depend> -->
    <!-- Use run_depend for packages you need at runtime: -->
    <!--   <run_depend>message_runtime</run_depend> -->
    <!-- Use test_depend for packages you need only for testing: -->
    <!--   <test_depend>gtest</test_depend> -->
    <buildtool_depend>catkin</buildtool_depend>
    
    
    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>gazebo_ros</run_depend>
    <run_depend>hector_gazebo_plugins</run_depend>
    
    <export>
        <gazebo_ros gazebo_media_path="${prefix}"/>
    </export>
</package>